<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".darurat">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="23dp"
        android:drawableStart="@drawable/black_map"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="Jl Kaliurang km 5.6"
        android:textColor="@color/black"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back_arrow"
        android:layout_width="17dp"
        android:layout_height="0dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Darurat"
        android:textColor="@color/black"
        android:textSize="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back_arrow"
        app:layout_constraintStart_toEndOf="@+id/btn_back_arrow"
        app:layout_constraintTop_toTopOf="@+id/btn_back_arrow" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="Darurat"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_arrow" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rumah_sakit_terdekat"
        android:textColor="@color/black"
        android:textSize="7dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/rumah__sakit" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="11dp"
        android:text="@string/nama_rumah_sakit"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="110dp"
        android:layout_height="16dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/rounded_blue" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Telepon"
        android:textColor="@color/white"
        android:textSize="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/track"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="335dp"
        android:layout_height="529dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/rectangle_159" />

    <ImageView
        android:id="@+id/btn_selesai"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:srcCompat="@drawable/rounded_blue" />

    <TextView
        android:id="@+id/textView_btn_selesai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selesai"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_selesai"
        app:layout_constraintEnd_toEndOf="@+id/btn_selesai"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/btn_selesai"
        app:layout_constraintTop_toTopOf="@+id/btn_selesai" />

</androidx.constraintlayout.widget.ConstraintLayout>